<resources>
    <string name="app_name">Avirat Group</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="about_us">About Us</string>
    <string name="project">Project</string>
    <string name="testimonials">Testimonials</string>
    <string name="vastu_tips">Vastu tips</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_info">Info</string>
    <string name="about_detail">
        <![CDATA[
<p><strong>The genesis &nbsp;of greatness always lies in the vision&nbsp;</strong></p>
<p>&nbsp;</p>
<p>The Avirat&nbsp;group is founded on a vision which seeks to usher in better tomorrow&nbsp;by providing people with improved quality of life and living standard . Recognize the basic need to approach the issue of planned development and growth across all the segments of real estate industry.</p>
        ]]>
    </string>
    <string name="vastu_detail">
        <![CDATA[
        <p style="text-align: center;">The main entrance door should be fixed on an auspicious day after performing Vastu&nbsp;pooja</p>
<p>North facing door should be in the left half when fencing the house that, is most towards the North - East , Avoid Placing door in Right HalfThe main entrance door should be fixed on an auspicious day after performing Vastu&nbsp;poojaNorth facing door should be in the left half when fencing the house that, is most towards the North - East , Avoid Placing door in Right Half</p>
<p>North facing door should be in the left half when fencing the house that, is most towards the North - East , Avoid Placing door in Right HalfThe main entrance door should be fixed on an auspicious day after performing Vastu&nbsp;poojaNorth facing door should be in the left half when fencing the house that, is most towards the North - East , Avoid Placing door in Right Half</p>
<p>&nbsp;</p>
        ]]>
    </string>
    <string name="faq_data">
        <![CDATA[
       <p>Q : &nbsp;Do NRI requires permision from RBI to purchase this property ?&nbsp;</p>
<p>A : No , Permission is required by NRI to purchase immovable property.</p>
<p>Q : &nbsp;Do NRI requires permision from RBI to purchase this property ?&nbsp;</p>
<p>A : No , Permission is required by NRI to purchase immovable property.</p>
<p>Q : &nbsp;Do NRI requires permision from RBI to purchase this property ?&nbsp;</p>
<p>A : No , Permission is required by NRI to purchase immovable property.</p>
<p>Q : &nbsp;Do NRI requires permision from RBI to purchase this property ?&nbsp;</p>
<p>A : No , Permission is required by NRI to purchase immovable property.</p>
<p>Q : &nbsp;Do NRI requires permision from RBI to purchase this property ?&nbsp;</p>
<p>A : No , Permission is required by NRI to purchase immovable property.</p>
<p>Q : &nbsp;Do NRI requires permision from RBI to purchase this property ?&nbsp;</p>
<p>A : No , Permission is required by NRI to purchase immovable property.</p>
        ]]>
    </string>
    <string name="contact_info_html">
<![CDATA[
<div>
<div>
<div>
<h3>CORPORATE ADDRESS</h3>
</div>
</div>
</div>
<div>
<div>
<div>
<p>Avirat House, Near Science City,<br />Sola, Ahmedabad &ndash; 380060</p>
</div>
</div>
</div>
<div>
<div>
<ul>
<li>info@aviratgroup.com</li>
<li>+91 79 65101300</li>
<li>+91 99250 13951</li>
<li>+91 9558013951</li>
</ul>
</div>
</div>
]]>
</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_share_app">Share via Email</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_us_title">Vision</string>
    <string name="project_string_cv1">Live Projects</string>
    <string name="project_string_cv2">Current Projects</string>
    <string name="project_string_cv3">Past Projects</string>
    <string name="brochure">Brochure</string>
    <string name="google_maps_api_key">AIzaSyBEirn3eNSgdr2dnCRzEkXcdkb2mFOfg0o</string>
    <string name="address_current_project">This is address of current project , district , Pin - 008990</string>
    <string name="banks_verified_loan">Following banks provide loan : XYZ Bank , Abc Bank</string>
    <string name="plans_text">Plans for project are as mentioned below</string>
    <string name="btn_inquire">Inquire</string>
    <string name="listing">Listing</string>
</resources>
