<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hardikgoswami.aviratv1.project.ProjectFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/card_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/cv_margin"
                card_view:cardBackgroundColor="#E6E6E6"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp"
                android:id="@+id/cv_liveproject">

                <!-- Main Content View -->
                <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_project_frag_cv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/about_margin_bottom"
                        android:layout_marginTop="@dimen/about_margin_top"
                        android:src="@drawable/about_home" />

                    <TextView
                        android:id="@+id/textview_project_frag_card1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/iv_project_frag_cv1"
                        android:layout_centerHorizontal="true"
                        android:text="@string/project_string_cv1" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/card_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/cv_margin"
                card_view:cardBackgroundColor="#E6E6E6"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <!-- Main Content View -->
                <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_project_frag_cv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/about_margin_bottom"
                        android:layout_marginTop="@dimen/about_margin_top"
                        android:src="@drawable/about_home" />

                    <TextView
                        android:id="@+id/textview_project_frag_card2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/iv_project_frag_cv2"
                        android:layout_centerHorizontal="true"
                        android:text="@string/project_string_cv2" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/card_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/cv_margin"
                card_view:cardBackgroundColor="#E6E6E6"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <!-- Main Content View -->
                <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_project_frag_cv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/about_margin_bottom"
                        android:layout_marginTop="@dimen/about_margin_top"
                        android:src="@drawable/about_home" />

                    <TextView
                        android:id="@+id/textview_project_frag_card3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/iv_project_frag_cv3"
                        android:layout_centerHorizontal="true"
                        android:text="@string/project_string_cv3" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
